infra/k8s/app-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: app-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app:apptest
  template: 
    metadata:
      labels:
        app:apptest
  spec:
    containers:
      - name: apptest
        image: madhavpalshikar/apptest
---
apiVersion: v1
kind: Service
metadata:
  name: apptest-srv
spec:
  selectors:
    app:apptest
  ports:
    - name: apptest
      protocol: TCP
      port: 4000
      targetPort: 4000
