infra/k8s/app-npsrv.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-npsrv
spec:
  type: NodePort
  selector:
    app: apptest 
  ports:
    - name: apptest
      protocol: TCP
      port: 4000
      targetPort: 4000
